--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint",
-    "deploy": "npm run build && git checkout -B github-pages && if exist docs rmdir /S /Q docs && if exist dist move dist docs && git add . && git commit -m 'deploy: Deploy to GitHub Pages' && git push -u origin github-pages"
+    "lint": "eslint"
   },
   "dependencies": {
     "@capacitor/android": "^6.1.2",
